# Computation_Foundational_Semantics

./: .gitignore  Cargo.toml  README.md
bins/collapse_spine_demo/: Cargo.toml
bins/collapse_spine_demo/src/: main.rs
bins/collapse_trace_demo/: Cargo.toml
bins/collapse_trace_demo/src/: main.rs
crates/asc7/: Cargo.toml
crates/asc7/src/: confusables.rs  lib.rs  normalize.rs  profile.rs  role.rs
crates/collapse_core/: Cargo.toml
crates/collapse_core/src/: canon.rs  cert.rs  digest.rs  entropy.rs  lib.rs  quotient.rs
crates/gates/: Cargo.toml
crates/gates/src/: lib.rs
crates/gates/tests/: freeze_gates.rs
crates/sembit/: Cargo.toml
crates/sembit/src/: cert.rs  lib.rs  quotient.rs  tests.rs
crates/structural_numbers/: Cargo.toml
crates/structural_numbers/src/: domain.rs  lib.rs  n_e.rs  q_e.rs  z_e.rs
crates/traceutil/: Cargo.toml
crates/traceutil/src/: lib.rs
gates/: README.md  expected.json
tests/: gate_invariants.rs
