[package]
name = "collapse_spine_demo"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
asc7 = { path = "../../crates/asc7" }
collapse_core = { path = "../../crates/collapse_core" }
sembit = { path = "../../crates/sembit" }
structural_numbers = { path = "../../crates/structural_numbers" }
serde_json = "1.0"
