[package]
name = "collapse_trace_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
asc7 = { path = "../../crates/asc7" }
collapse_core = { path = "../../crates/collapse_core" }
sembit = { path = "../../crates/sembit" }
structural_numbers = { path = "../../crates/structural_numbers" }
traceutil = { path = "../../crates/traceutil" }
serde_json = "1.0"
